objects/Operating_Expense__c/Operating_Expense__c.object-meta.xml
<CustomObject>
    <label>Operating Expense</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operating Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>