objects/Operating_Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Effective_Date__c</columns>
    <columns>Operating_Expense_Cost_Pct__c</columns>
    <columns>Service_Center__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>